# RAPIDADB

./: .gitignore  CMakeLists.txt  OPTIMIZATION_STATUS.md  README.md  SESSION_SUMMARY.md  WEEKS_1_TO_4_SUMMARY.md  nsight_l2_distance.txt  pyproject.toml  setup.py
benchmarks/: .gitignore  README.md  bench_distance.py  requirements.txt  run_benchmarks.sh
benchmarks/results/: benchmark_final_week4.json  benchmark_results_100k.json  benchmark_results_100k_optimized.json  benchmark_results_100k_week2_final.json  benchmark_results_10k.json  benchmark_results_50k.json  benchmark_week4_baseline.json
benchmarks/src/: bench_compare.py  bench_competitors.py  bench_full_comparison.py  datasets.py  profile_kernels.py
csrc/bindings/: torch_extension.cpp
csrc/clustering/: kmeans.cpp
csrc/core/: stream_pool.cpp
csrc/include/rapidadb/clustering/: kmeans.h
csrc/include/rapidadb/core/: cuda_utils.h  stream_pool.h  types.h
csrc/include/rapidadb/index/: flat_index.h
csrc/include/rapidadb/kernels/: distance.h  fused_l2_topk.h  search_fused.h  topk.h  warp_utils.h
csrc/index/: flat_index.cpp
csrc/kernels/: distance.cu  kmeans.cu  search_fused.cu  topk.cu  topk_warp.cu
docs/: installation.md  quickstart.md
docs/api/: index.md
docs/tutorials/: 01_basic_usage.md
examples/: basic_search.py
examples/notebooks/: quickstart.ipynb
python/rapidadb/: __init__.py  async_search.py  config.py  index.py  pinned_buffer.py  utils.py
scripts/: analyze_memory.py  benchmark_topk.py  format.sh  profile.sh  profile_distance_kernels.py  profile_nsight.sh
tests/python/: conftest.py  test_e2e.py  test_flat_index.py  test_kernels.py
